tests/baselines/reference/overloadingOnConstantsInImplementation.errors.txt
==== tests/cases/compiler/overloadingOnConstantsInImplementation.ts (4 errors) ====
    function foo(a: 'hi', x: string);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    function foo(a: 'hi', x: string);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'foo'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    function foo(a: 'hi', x: any) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS2163: Overload signature implementation cannot use specialized type.